# pypath-common

./: .bumpversion.cfg  .coveragerc  .fixit.config.yaml  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
docs/source/: conf.py
pypath_common/: __init__.py  _constants.py  _logger.py  _misc.py  _process.py  _session.py  _settings.py
pypath_common/data/: __init__.py  _common_data.py  _data.py  aacodes.yaml  aanames.yaml  amino_acids.yaml  igraph_graphics_attrs.yaml  mod_keywords.yaml  pmod_bel.yaml  psite_mod_types.yaml  psite_mod_types2.yaml  settings.yaml
pypath_common/data/idtypes/: array.yaml  biomart.yaml  hmdb.yaml  pro.yaml  ramp.yaml  uniprot.yaml  uniprot_idmapping.yaml
tests/: test_twentythree.py
