[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pypath_common"
version = "0.0.1"
description = "Code shared across pypath modules"
license = "GPL-3.0-only"
authors = [
    "Denes Turei <turei.denes@gmail.com>"
]
packages = [
    { include = "pypath_common" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
repository = "https://github.com/saezlab/pypath-common"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
tox = "^3.20.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/saezlab/pypath-common/issues"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
from_first = true
line_length = 80
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_num="numpy,pandas"
sections = "FUTURE,STDLIB,THIRDPARTY,NUM,FIRSTPARTY,LOCALFOLDER"
no_lines_before="LOCALFOLDER"
balanced_wrapping = true
force_grid_wrap = 0
length_sort = "1"
indent = "    "

[tool.flake8]
ignore = ["D200", "D202", "D401"]
per-file-ignores = [
    "docs/source/conf.py:D100",
    "tests/*:D100,D101,D102"
]
max-line-length = 80
count = true
